View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026002 | Open CASCADE | OCCT:Visualization | public | 2015-04-01 14:34 | 2015-07-13 17:09 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0026002: Visualization, TKOpenGl - detect alien Core Profile context | ||||
Description | OpenGl_Context::init() currently detect Core Profile by external argument. This option is unavailable when context has been created by application. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26002 has been created by kgv. SHA-1: 32dbdd1c792fada3532077dd525908693e61b27f Detailed log of new commits: Author: kgv Date: Wed Apr 1 14:39:01 2015 +0300 0026002: Visualization, TKOpenGl - detect alien Core Profile context Read GL_CONTEXT_PROFILE_MASK flags. |
|
Please test the patch. |
|
Branch CR26002 has been updated by apv. SHA-1: f38c5afb519dee0270ef40c35746704c3153de83 Detailed log of new commits: Author: apv Date: Thu Apr 2 15:44:06 2015 +0300 Update of unstable test-case |
|
Branch CR26002 has been deleted by kgv. SHA-1: f38c5afb519dee0270ef40c35746704c3153de83 |
occt: master d4271fe5 2015-04-02 12:58:40 Committer: bugmaster Details Diff |
0026002: Visualization, TKOpenGl - detect alien Core Profile context Read GL_CONTEXT_PROFILE_MASK flags. Update of unstable test-case |
Affected Issues 0026002 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - tests/sewing/tol_100/K1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-04-01 14:34 | kgv | New Issue | |
2015-04-01 14:34 | kgv | Assigned To | => kgv |
2015-04-01 14:39 | git | Note Added: 0039096 | |
2015-04-01 14:39 | kgv | Note Added: 0039097 | |
2015-04-01 14:39 | kgv | Assigned To | kgv => bugmaster |
2015-04-01 14:39 | kgv | Severity | minor => trivial |
2015-04-01 14:39 | kgv | Status | new => resolved |
2015-04-01 14:39 | kgv | Status | resolved => reviewed |
2015-04-01 14:40 | kgv | Relationship added | child of 0025854 |
2015-04-01 15:00 |
|
Assigned To | bugmaster => apv |
2015-04-01 18:01 |
|
Test case number | => Not needed |
2015-04-02 15:44 | git | Note Added: 0039162 | |
2015-04-07 16:08 | bugmaster | Changeset attached | => occt master d4271fe5 |
2015-04-07 16:08 | bugmaster | Assigned To | apv => bugmaster |
2015-04-07 16:08 | bugmaster | Status | reviewed => verified |
2015-04-07 16:08 | bugmaster | Resolution | open => fixed |
2015-04-09 09:50 | git | Note Added: 0039462 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |
2015-07-13 17:09 | kgv | Relationship added | related to 0026424 |