0026002: Visualization, TKOpenGl - detect alien Core Profile context

Read GL_CONTEXT_PROFILE_MASK flags.

Update of unstable test-case